# DaysOfTheYear_Week2

DaysOfTheYear/: CMakeLists.txt
DaysOfTheYear/DaysOfTheYear/: CMakeLists.txt  DaysOfTheYear.c  DaysOfTheYear.h
